crates/lyra-tests/tests/snapshots/corpus__lrm__7__7.10.5__bounded_queues__non_const_bound.snap
---
source: crates/lyra-tests/tests/corpus.rs
expression: ws.dump_diagnostics()
---
// file: main.sv (1 diagnostic)
  error[lyra.type[36]] 2:11..2:11: queue bound must be a constant positive integer
---
unit (0 diagnostics)
