crates/lyra-tests/tests/snapshots/corpus__lrm__7__7.10.5__bounded_queues__zero_bound.snap
---
source: crates/lyra-tests/tests/corpus.rs
expression: ws.dump_diagnostics()
---
// file: main.sv (1 diagnostic)
  error[lyra.type[37]] 1:12..1:12: queue bound must be a positive integer, got 0
---
unit (0 diagnostics)
